[metadata]
name = matplotlib_tufte
description = 'styles from Tufte\'s "Visual Display Of Quantitative Information" for matplotlib'
author = ninivert
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
version = 0.1
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
install_requires =
	matplotlib
python_requires = >=3.6
package_dir =
	=src
zip_safe = no


[options.package_data]
matplotlib_tufte =
	lm2.004otf/**
	tufte.mplstyle
